# GraspQualityMetrics

./: .gitignore  CMakeLists.txt  README.md
example/: qhullExample.cpp  testQmLibrary.cpp  testWrenchSpaceComp.cpp
include/: computeGraspQuality.h  grasp.h  taskwrenchellispoid.h  twsgraspquality.h  wrench_cone.h  wrenchspace.h
src/: grasp.cpp  taskwrenchellipsoid.cpp  twsgraspquality.cpp  wrench_cone.cpp  wrenchspace.cpp
